# wasmer-postgres

./: Cargo.toml
src/: instance.rs  lib.rs  wasm--0.1.0.sql
src/foreign_data_wrappers/: exported_functions.rs
tests/: integration.rs
