[package]
publish = false
name = "pg-ext-wasm"
version = "0.0.1"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
edition = "2018"
description = "Postgres extension to run WebAssembly binaries"
repository = "https://github.com/wasmerio/pg-ext-wasm"
keywords = ["postgres", "pg", "webassembly", "wasm"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
uuid = { version = "0.7", features = ["v5"] }
wasmer = "2.3.0"
wasmer-cache = "2.3.0"
pg-extend = { git = "https://github.com/ashuka24/pg-extend-rs", branch = "support-gp6" }
pg-extern-attr = { git = "https://github.com/ashuka24/pg-extend-rs", branch = "support-gp6" }
